--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,11 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
+    "react-countdown": "^2.3.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.2",
     "react-player": "^2.10.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "tailwind-scrollbar-hide": "^1.1.7",
     "web-vitals": "^2.1.4"
