--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,9 @@
     "react": "^18.2.0",
     "react-countdown": "^2.3.2",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.2",
     "react-hook-form": "^7.34.2",
+    "react-media-recorder": "^1.6.6",
     "react-player": "^2.10.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
