--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,7 @@
 	"description": "",
 	"type": "module",
 	"scripts": {
-		"dev": "nodemon --experimental-modules --es-module-specifier-resolution=node server.js",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"dev": "nodemon --experimental-modules --es-module-specifier-resolution=node server.js"
 	},
 	"keywords": [],
 	"author": "",
