--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,3 +1,4 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
@@ -16,7 +17,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
-/uploads
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
