--- a/server/package.json
+++ b/server/package.json
@@ -1,23 +1,40 @@
 {
-	"name": "server",
-	"version": "1.0.0",
-	"description": "",
-	"type": "module",
-	"scripts": {
-		"dev": "nodemon --experimental-modules --es-module-specifier-resolution=node server.js"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"dependencies": {
-		"@prisma/client": "^4.3.1",
-		"aws-sdk": "^2.1205.0",
-		"body-parser": "^1.20.0",
-		"express": "^4.18.1",
-		"express-fileupload": "^1.4.0",
-		"minio": "^7.0.32",
-		"multer": "^1.4.5-lts.1",
-		"nodemon": "^2.0.19",
-		"prisma": "^4.3.1"
-	}
+  "name": "server",
+  "version": "1.0.0",
+  "description": "",
+  "type": "module",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@ffprobe-installer/ffprobe": "^1.4.1",
+    "@prisma/client": "^4.3.1",
+    "aws-sdk": "^2.1205.0",
+    "axios": "^0.27.2",
+    "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
+    "execa": "^6.1.0",
+    "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
+    "ffmpeg": "^0.0.4",
+    "ffmpeg-extract-frames": "^2.0.2",
+    "ffprobe": "^1.1.2",
+    "fs-extra": "^10.1.0",
+    "minio": "^7.0.32",
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.19",
+    "path": "^0.12.7",
+    "sharp": "^0.31.0",
+    "url": "^0.11.0",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "ffmpeg-probe": "^1.0.6",
+    "fluent-ffmpeg": "^2.1.2",
+    "prisma": "^4.3.1"
+  }
 }
