improved server's security
replace ids with environment variables

--- a/server/.gitignore
+++ b/server/.gitignore
@@ -11,8 +11,10 @@
 # production
 /build
 
-# exclude everything inside uploads
+# exclude everything inside these folders
 uploads/*
+frames/*
+
 # exception to the rule to make sure there's always an upload folder
 !uploads/.gitkeep 
 
@@ -23,6 +25,7 @@ uploads/*
 .env.development.local
 .env.test.local
 .env.production.local
+.env
 
 npm-debug.log*
 yarn-debug.log*
