--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "db-push": "prisma db push",
+    "db-pull": "prisma db pull",
+    "db-generate": "prisma generate",
+    "db-studio": "prisma studio"
   },
   "keywords": [],
   "author": "",
